# cpprefresher

./: CMakeLists.txt  README.md  another_module.cppm  external_header.h  external_module.cppm  external_source.cpp  main.cpp  separated_module.cpp  separated_module.cppm  shape.cpp  shape.h  shape_module.cppm  split_extension_module.cpp  split_main_module.cppm  test_module.cpp  test_module.cppm
.devcontainer/: Dockerfile  devcontainer.json
